# snake-cy

./: meson.build
headers/: game.h  linked_list.h  renderer.h  snake.h  sprite.h
src/: game.c  linked_list.c  main.c  renderer.c  snake.c  sprite.c
